# module-2_homework-8

./: pyproject.toml
part_1/: config.ini  connect.py  main.py  models.py  seed.py
part_2/: config.ini  connect.py  consumer.py  models.py  producer.py
