[tool.poetry]
name = "homework-8"
version = "0.1.0"
description = ""
authors = ["Denys Kotsiuba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pymongo = "~4.3.3"
mongoengine = "~0.27.0"
redis = "~4.5.5"
redis-lru = "~0.1.2"
pika = "~1.3.2"
faker = "~18.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
